// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthenticationQueries composeUserSession should return no user if not found 1`] = `null`;

exports[`AuthenticationQueries composeUserSession should return the correct user 1`] = `
Object {
  "email": "development@icapps.com",
  "firstName": null,
  "lastName": null,
  "permissions": Object {
    "roles": Object {
      "edit": true,
      "view": true,
    },
    "users": Object {
      "edit": true,
      "view": true,
    },
  },
  "state": "ACTIVE",
  "userId": "c4cb4582-1e97-4e3e-9d49-c744c8c1a229",
}
`;

exports[`AuthenticationQueries getLoggedInUser should return no user if not found 1`] = `undefined`;

exports[`AuthenticationQueries getLoggedInUser should return the correct user 1`] = `
Object {
  "createdAt": 2020-01-01T08:21:59.730Z,
  "createdBy": null,
  "email": "development@icapps.com",
  "firstName": null,
  "id": "c4cb4582-1e97-4e3e-9d49-c744c8c1a229",
  "lastName": null,
  "permissions": Object {
    "roles": Object {
      "edit": true,
      "view": true,
    },
    "users": Object {
      "edit": true,
      "view": true,
    },
  },
  "state": "ACTIVE",
  "updatedAt": 2020-01-01T08:21:59.730Z,
  "updatedBy": null,
}
`;
